<resources>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">Avanza sin drogas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Avanza sin drogas</string>
    <string name="nav_header_subtitle">Avanzasindrogas2311@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ayuda</string>
    <string name="title_activity_maps">Map</string>
    <string name="image_header">%1$s  %2$s</string>
    <string name="bacon_ipsum">
        Bacon ipsum dolor sit amet venison shankle pork chop meatball tri-tip beef ribs turducken.
        Strip steak ball tip boudin shank, turducken leberkas pork chop beef ribs ham hock sausage
        frankfurter prosciutto doner ham. Bacon landjaeger ball tip, andouille chuck beef ribs jowl
        kevin tri-tip turkey biltong frankfurter sausage. Boudin pork belly meatloaf chicken cow
        tri-tip kielbasa shoulder. Pork loin pig boudin hamburger pastrami short ribs. Sirloin
        tongue pork loin chicken spare ribs bresaola pastrami.\n\n
        Tenderloin turducken pork chop, pork belly beef ribs brisket ham. Turducken landjaeger short
        loin capicola pancetta pork chop strip steak rump meatloaf brisket kevin doner short ribs
        salami. Beef prosciutto flank leberkas landjaeger swine. Fatback prosciutto sausage, jerky
        tail tongue hamburger jowl biltong shank pork belly swine filet mignon chicken ground round.
        Pork chop porchetta ground round tri-tip tail t-bone.\n\n
        Landjaeger rump bacon salami sausage pork loin pig brisket strip steak corned beef. Biltong
        sirloin meatloaf ribeye, bresaola cow chicken t-bone frankfurter andouille strip steak jerky
        capicola. Ribeye porchetta strip steak boudin. Kielbasa cow brisket pastrami ball tip
        tenderloin bresaola ham. Biltong andouille chuck ham hock jerky beef chicken, flank shankle
        ball tip venison porchetta kevin fatback kielbasa. Boudin tongue ground round, turkey pork
        belly salami corned beef pork tri-tip meatloaf sausage andouille strip steak pig. Spare ribs
        beef meatloaf rump sausage doner frankfurter.\n\n
        Fatback porchetta pork loin meatball, turducken pork chop drumstick boudin. Kevin tri-tip
        ground round corned beef, ribeye swine filet mignon salami pork spare ribs pork chop
        brisket. Filet mignon shankle t-bone bacon. Turducken capicola turkey porchetta kielbasa
        shank pork loin jerky venison tenderloin boudin ham hock ground round.</string>
    <string name="start">Finalizar</string>
    <string name="next">Siguiente</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="dummy_button">Volver al menu</string>
    <string name="dummy_content">El resultado de la prueba indica que hay un 60% de posibilidades del consumo de drogas!</string>
    <string name="q1">¿Ha percibido cambios de conducta o comportamientos muy repentinos últimamente en su hijo(a)?</string>
    <string name="q2">¿Ha notado a su hijo(a) más agresivo cuando nunca no lo ha sido?</string>
    <string name="q3">¿Ha notado a su hijo más retraído cuando nunca no lo ha sido?</string>
    <string name="q4">¿Percibe usted alteraciones de sueño en su hijo(a), cuando no es una persona ocupada?</string>
    <string name="q5">¿Ha notado a su hijo(a) acelerado más de lo normal?</string>
    <string name="q6">¿Últimamente ha empezado a pedir y a exigir más dinero sin justa causa?</string>
    <string name="q7">¿Ha consumido usted SPA (Drogas Psicoactivas) alguna vez?</string>
    <string name="q8">¿Qué opinión  tiene usted de las drogas?</string>
    <string name="q9">¿Ha hablado usted con su hijo(a) sobre el tema de las drogas?</string>
    <string name="q10">¿Tiene usted conocimientos sobre los efectos y alteraciones de conducta de cada tipo de droga?</string>
    <string name="Cigarrillo">\n<b><big><font color="#303030" size="21">¿Qué es?</font></big></b>\n\nProducto del tabaco en forma de tubo que se fabrica con hojas de tabaco curadas,
                                                      firmemente enrolladas en una envoltura de hoja de tabaco o una envoltura que
                                                      contiene tabaco. También puede tener otros ingredientes, como sustancias para
                                                      añadirle diferentes sabores. Un cigarro se enciende en un extremo y se fuma pero,
                                                      por lo general, no se inhala hacia los pulmones. Los cigarrillos contienen nicotina y
                                                      muchos productos químicos que causan cáncer y que son perjudiciales tanto para
                                                      los fumadores como para quienes no fuman. \n\nFumar cigarrillos puede producir
                                                      adicción a la nicotina y causar cáncer de boca, laringe, esófago, pulmón y páncreas.
                                                      Fumar muchos cigarrillos también puede aumentar el riesgo de cardiopatías y
                                                      enfermedades pulmonares, como el enfisema y la bronquitis crónica.
                                                      Rango de edad en la que se empieza fumar:\n\nEl Departamento Nacional de Estadísticas, DANE, reveló que muchos colombianos
                                                      comienzan a fumar cigarrillo a los 10 años de edad.
                                                      Este informe, obtenido de la encuesta de calidad de vida realizada por la entidad en
                                                      2017, concluyó que el 7,0% de los encuestados de 10 años afirmaron fumar actualmente.\n\n<b><big><font color="#303030" size="21">Efectos</font></big></b>\nEstos son los principales efectos dañinos que causa el cigarrillo en las personas:\n\n<b>•Afecta el sistema broncopulmonar y el cardiovascular.</b>Fumar es la principal causa de cáncer en los pulmones, la laringe, el aparato urinario y los órganos digestivos.\n\n<b>•Provoca efectos malignos en la mucosa oral.</b> Debido al calor que se produce por la combustión del cigarrillo, por ejemplo la gingivitis y la periodontitis.\n\n<b>•Aumenta el riesgo de padecer enfisema, EPOC, bronquitis crónica y úlcera péptica.</b> Además, predispone a la arteriosclerosis coronaria, cerebral y arterial periférico.\n\n<b>•Incrementa la posibilidad de contraer úlceras en el estómago, enfermedad del corazón y de los vasos sanguíneos.</b> A su vez, disminuye las defensas y la inmunidad frente a algunas infecciones.\n\n
•Causa arrugas por la degradación de las fibras elásticas, aliento desagradable, dientes amarillos, tez cerosa y grisácea y cicatrización menor.\n\n
        <b>Agrava la intensidad, la frecuencia y el ritmo del asma</b>, desencadenando esta enfermedad o bien causando que los que la padecen se sientan más propensos a comenzar un cuadro asmático.\n\n<b><big><font color="#303030" size="21">Duración del efecto en el cuerpo:</font></big></b>\n\nAl consumir un cigarrillo la nicotina se absorbe en tu torrente sanguíneo. A partir de ahí, las enzimas en tu hígado convierten la nicotina en cotinina. Esta sustancia se puede detectar en el cuerpo hasta tres meses después de la última ingestión. El tiempo que permanezca en tu sistema dependerá de cómo se consumió la nicotina y con qué frecuencia.\n

    </string>
    <string name="Barbituricos"></string>
    <string name="Marihuana">

 \n<b><big><font color="#303030" size="21">¿Qué es la marihuana sintética?</font></big></b>\n\n
Marihuana sintética es una droga de diseño en el que las hierbas, incienso u otros
materiales de hoja son rociados con productos químicos líquidos de laboratorio de
síntesis para imitar el efecto de tetrahidrocannabinol (THC).\n\n

<b><big><font color="#303030" size="21">Otros nombres:</font></big></b>\n\nMarihuana sintética, también conocido por el nombre de Spice o K2.\n\n

<b><big><font color="#303030" size="21">Su comercialización</font></big></b>\n\n

Se comercializa con frecuencia como un incienso en coloridos bolsas tres onzas y
etiquetado, no para el consumo humano.\n\n
Los pacientes mostraron diversos grados de catatonia (una incapacidad para
responder a la estimulación verbal o física, incluyendo dolor, un ritmo cardíaco
elevado, agitación, ansiedad, mareo, dolor de cabeza, sudoración excesiva.\n\n

No se conocen los efectos a largo plazo de la marihuana sintética sobre la
reproducción, el desarrollo del cáncer, la memoria o el potencial de adicción.
Spice/K2 también puede aumentar la presión arterial y causar la reducción del
suministro de sangre al corazón (isquemia miocárdica), y en unos pocos casos se
ha asociado con ataques al corazón.

    </string>
    <string name="autores_del_proyecto">AUTORES DEL PROYECTO</string>
    <string name="ndres_berrio_rojas">Ándres Berrio Rojas</string>
    <string name="ndres_es_un_estudiante_de_la_instituci_n_educativa_byron_gaviria_tiene_17_a_os_le_gusta_el_futbol_aspira_entrar_a_la_universidad_a_estudiar_medicina">Ándres es un estudiante de la institución educativa byron gaviria, tiene 17 años. Le gusta el futbol, aspira entrar a la universidad a estudiar Medicina.</string>
    <string name="valentina_es_una_estudiante_de_la_instituci_n_educativa_byron_gaviria_tiene_17_a_os_le_gusta_la_gimnasia_aspira_entrar_a_la_universidad_a_estudiar_medicina">Valentina es una estudiante de la Instituciòn Educativa Byron Gaviria, tiene 17 años. Le gusta la gimnasia, Aspira entrar a la universidad a estudiar Medicina.</string>
    <string name="valentina_caldera_hinestrosa">Valentina Caldera Hinestroza</string>
    <string name="kkik">kkik</string>
    <string name="kkkk">kkkk</string>
    <string name="cristhian_arboleda_casta_eda">Cristhian Arboleda Castañeda</string>
    <string name="cristhian_es_un_estudiante_de_la_instituci_n_educativa_byron_gaviria_tiene_16_a_os_apasionado_por_programar_aspira_entrar_a_la_universidad_a_estudiar_ig_sistemas">Cristhian es un estudiante de la Institución Educativa Byron Gaviria, tiene 16 años. Apasionado por programar, aspira entrar a la universidad a estudiar Ig.Sistemas.</string>
    <string name="ja">ja</string>
</resources>