<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutoresActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:layout_marginEnd="8dp"
                android:text="@string/autores_del_proyecto"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.562"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingLeft="13dp"
                android:layout_marginEnd="152dp"
                android:text="@string/ndres_berrio_rojas"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="113dp"
                android:layout_height="110dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/kkik"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintVertical_bias="0.672"
                app:srcCompat="@drawable/cris" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="130dp"
                android:layout_height="133dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ja"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.4"
                app:srcCompat="@drawable/caldera" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="135dp"
                android:text="@string/ndres_es_un_estudiante_de_la_instituci_n_educativa_byron_gaviria_tiene_17_a_os_le_gusta_el_futbol_aspira_entrar_a_la_universidad_a_estudiar_medicina"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" >




            </TextView>


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="106dp"
                android:layout_height="119dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/kkkk"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:srcCompat="@drawable/rasta" />


            <TextView
                android:id="@+id/textView6"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="130dp"
                android:text="@string/cristhian_es_un_estudiante_de_la_instituci_n_educativa_byron_gaviria_tiene_16_a_os_apasionado_por_programar_aspira_entrar_a_la_universidad_a_estudiar_ig_sistemas"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="140dp"
                android:layout_marginBottom="20dp"
                android:text="@string/valentina_es_una_estudiante_de_la_instituci_n_educativa_byron_gaviria_tiene_17_a_os_le_gusta_la_gimnasia_aspira_entrar_a_la_universidad_a_estudiar_medicina"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="8dp"
                android:layout_marginEnd="56dp"
                android:text="@string/cristhian_arboleda_casta_eda"
                android:textAlignment="textStart"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/valentina_caldera_hinestrosa"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="28dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>